--- a/template/user/login.html
+++ b/template/user/login.html
@@ -9,8 +9,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>登录</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -27,6 +25,13 @@
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" href="{% static 'css/animate.css' %}">
 	<link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <style>
+        #particles-js{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+        }
+    </style>
 
 	<!-- Modernizr JS -->
 	<script src="{% static 'js/modernizr-2.6.2.min.js' %}"></script>
@@ -34,9 +39,14 @@
 	<!--[if lt IE 9]>
 	<script src="{% static 'js/respond.min.js' %}"></script>
 	<![endif]-->
-
 	</head>
 	<body class="style-3">
+
+        <div class="count-particles">
+          <span class="js-count-particles"></span>
+        </div>
+
+        <div id="particles-js"></div>
 
 		<div class="container">
 			<div class="row">
@@ -64,33 +74,36 @@
 
 				</div>
 			</div>
-			<div class="row" style="padding-top: 60px; clear: both">
+			<div class="row" style="padding-top: 140px; clear: both">
 				<div class="col-md-12 text-center">
                     <a href="{% url 'index' %}" title="念旧博客">念旧博客</a> 版权所有，保留一切权利 !   ·    <a href="#" title="站点地图">站点地图</a>   © 2018-2020 ·  <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank" >粤ICP备xxxxxx号</a>   ·   托管于 <a rel="nofollow" target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html">阿里云</a> & <a rel="nofollow" target="_blank" href="https://www.qiniu.com/">七牛</a>
                 </div>
 			</div>
 		</div>
 
-    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+        <script src="{% static 'js/particles.js' %}"></script>
+        <script src="{% static 'js/app.js' %}"></script>
 
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 
-	<script src="{% static 'js/jquery.placeholder.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-	<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+        <script src="{% static 'js/jquery.placeholder.min.js' %}"></script>
 
-	<script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
 
-    <script src="{% static 'js/common.js' %}"></script>
-    
-    <script>
-        $("#username").focus(function () {
-            $('.error-output label').remove();
-        });
-        $("#password").focus(function () {
-            $('.error-output label').remove();
-        })
-    </script>
+        <script src="{% static 'js/main.js' %}"></script>
+
+        <script src="{% static 'js/common.js' %}"></script>
+
+        <script>
+            $("#username").focus(function () {
+                $('.error-output label').remove();
+            });
+            $("#password").focus(function () {
+                $('.error-output label').remove();
+            })
+        </script>
         
 	</body>
 </html>
