--- a/template/user/register.html
+++ b/template/user/register.html
@@ -23,6 +23,13 @@
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" href="{% static 'css/animate.css' %}">
 	<link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <style>
+        #particles-js{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+        }
+    </style>
 
 	<!-- Modernizr JS -->
 	<script src="{% static 'js/modernizr-2.6.2.min.js' %}"></script>
@@ -33,6 +40,12 @@
 
 	</head>
 	<body class="style-3">
+
+        <div class="count-particles">
+          <span class="js-count-particles"></span>
+        </div>
+
+        <div id="particles-js"></div>
 
 		<div class="container">
 			<div class="row">
@@ -74,18 +87,20 @@
 			</div>
 		</div>
 	
+        <script src="{% static 'js/particles.js' %}"></script>
+        <script src="{% static 'js/app.js' %}"></script>
 
-	<script type='text/javascript' src='//libs.baidu.com/jquery/1.8.3/jquery.min.js?ver=1.0'></script>
+        <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-	<script src="{% static 'js/jquery.placeholder.min.js' %}"></script>
+        <script src="{% static 'js/jquery.placeholder.min.js' %}"></script>
 
-	<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+        <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
 
-	<script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/main.js' %}"></script>
 
-    <script src="{% static 'js/common.js' %}"></script>
+        <script src="{% static 'js/common.js' %}"></script>
 
 	</body>
 </html>
