add feed and sitemap

--- a/template/base.html
+++ b/template/base.html
@@ -103,25 +103,16 @@ window._deel = {name: '念旧博客',url: 'http://localhost:8000', ajaxpager: ''
 <footer class="footer">
     <div class="footer-inner">
         <div class="copyright pull-left">
-            <a href="{% url 'index' %}" title="念旧博客">念旧博客</a> 版权所有，保留一切权利 !   ·    <a href="#" title="站点地图">站点地图</a>   © 2018-2020 ·  <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank" >粤ICP备xxxxxx号</a>   ·   托管于 <a rel="nofollow" target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html">阿里云</a> & <a rel="nofollow" target="_blank" href="https://www.qiniu.com/">七牛</a>
+            <a href="{% url 'index' %}" title="念旧博客">念旧博客</a> 版权所有，保留一切权利 !   ·    <a href="/sitemap.xml" title="站点地图">站点地图</a>   © 2018-2020 ·  <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank" >粤ICP备xxxxxx号</a>   ·   托管于 <a rel="nofollow" target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html">阿里云</a> & <a rel="nofollow" target="_blank" href="https://www.qiniu.com/">七牛</a>
         </div>
         <div class="trackcode pull-right">
-{#            <script src="https://s23.cnzz.com/z_stat.php?id=4687699&web_id=4687699" language="JavaScript">#}
-{#            </script>#}
-
-{#            <script>#}
-{#            var _hmt = _hmt || [];#}
-{#            (function() {#}
-{#              var hm = document.createElement("script");#}
-{#              hm.src = "//hm.baidu.com/hm.js?b52ad73b0742bc99858449915680c213";#}
-{#              var s = document.getElementsByTagName("script")[0];#}
-{#              s.parentNode.insertBefore(hm, s);#}
-{#            })();#}
-{#            </script>#}
         </div>
     </div>
 </footer>
 {% endblock %}
+
+<section class="mysidebar">
+</section>
 
 </body>
 </html>
