--- a/template/index.html
+++ b/template/index.html
@@ -187,21 +187,12 @@
                     <a href="http://wpa.qq.com/msgrd?v=3&uin=508477625&site=qq&menu=yes" rel="external nofollow" title="联系QQ" target="_blank">
                         <i class="qq fa fa-qq"></i>
                     </a>
-                    <a href="#" rel="external nofollow" target="_blank"  title="订阅本站">
+                    <a href="{% url 'feed' %}" rel="external nofollow" target="_blank"  title="订阅本站">
                         <i class="rss fa fa-rss"></i>
                     </a>
                 </div>
             </div>
         </div>
-{#        <div class="widget d_textbanner">#}
-{#            <a class="style01" href="https://yusi123.com/3233.html">#}
-{#                <div class="title">#}
-{#                    <h2>免费下载</h2>#}
-{#                </div>#}
-{#                <h3>本站主题：Yusi1.0(扁平化+响应式)</h3>#}
-{#                <p>支持 WordPress 3.8 及以上最新版，兼容 IE9+、Chrome、Firefox 等主流浏览器！</p>#}
-{#            </a>#}
-{#        </div>#}
         <div class="widget d_tag">
                 <div class="title"><h2>日期归档</h2></div>
                 <div class="d_tags">
