修复邮件不能发送问题

--- a/template/user/register_succ.html
+++ b/template/user/register_succ.html
@@ -45,14 +45,14 @@
                 <div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="jumbotron" style="text-align: center;">
-					  <h1>注册成功</h1>
+					  <h3>注册成功，请进入邮箱激活您的账号</h3>
 					  <p class="lead">{{ quote.quote }}</p>
                       <p class="pull-right">by {{ quote.author }}</p>
 					</div>
 				</div>
 			</div>
 			<div class="row" style="padding-top: 60px; clear: both;">
-				<div class="col-md-12 text-center"><p><small>&copy; All Rights Reserved. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></small></p></div>
+				<div class="col-md-12 text-center"><a href="{% url 'index' %}" title="念旧博客">念旧博客</a> 版权所有，保留一切权利 !   ·    <a href="/sitemap.xml" title="站点地图">站点地图</a>   © 2018-2020 ·  <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank" >粤ICP备xxxxxx号</a>   ·   托管于 <a rel="nofollow" target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html">阿里云</a> & <a rel="nofollow" target="_blank" href="https://www.qiniu.com/">七牛云</a></div>
 			</div>
 
 	<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
