--- a/template/user/register.html
+++ b/template/user/register.html
@@ -82,7 +82,7 @@
 			</div>
 			<div class="row" style="padding-top: 60px; clear: both;">
 				<div class="col-md-12 text-center">
-                    <a href="{% url 'index' %}" title="念旧博客">念旧博客</a> 版权所有，保留一切权利 !   ·    <a href="#" title="站点地图">站点地图</a>   © 2018-2020 ·  <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank" >粤ICP备xxxxxx号</a>   ·   托管于 <a rel="nofollow" target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html">阿里云</a> & <a rel="nofollow" target="_blank" href="https://www.qiniu.com/">七牛</a>
+                    <a href="{% url 'index' %}" title="念旧博客">念旧博客</a> 版权所有，保留一切权利 !   ·    <a href="/sitemap.xml" title="站点地图">站点地图</a>   © 2018-2020 ·  <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank" >粤ICP备xxxxxx号</a>   ·   托管于 <a rel="nofollow" target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html">阿里云</a> & <a rel="nofollow" target="_blank" href="https://www.qiniu.com/">七牛云</a>
                 </div>
 			</div>
 		</div>
